--- a/_includes/microchip.html
+++ b/_includes/microchip.html
@@ -2,7 +2,12 @@
 
 
 <div class="section" id="microchip">
-  <div class="header">{{ microchip.header }}</div>
+  <div class="header">
+    {{ microchip.header }}
+    <span class="material-icons" title="наверх" href="#top">
+      keyboard_double_arrow_up
+    </span>
+  </div>
 
   <div class="quote">{{ microchip.description }}</div>
 
