--- a/_includes/education-projects.html
+++ b/_includes/education-projects.html
@@ -3,7 +3,7 @@
 
 
 <div class="section" id="projects-education">
-  <div class="header">{{ projects.header }}</div>
+  {% include header_line.html header=projects.header %}
 
   <div class="quote">{{ projects.description }}</div>
 
