--- a/_includes/educations.html
+++ b/_includes/educations.html
@@ -3,7 +3,7 @@
 
 
 <div class="section" id="educations">
-  <div class="header">{{ educations.header }}</div>
+  {% include header_line.html header=educations.header %}
 
   <div class="quote">{{ educations.description }}</div>
 
