--- a/_includes/programming.html
+++ b/_includes/programming.html
@@ -2,7 +2,7 @@
 
 
 <div class="section" id="programming">
-  <div class="header">{{ programming.header }}</div>
+  {% include header_line.html header=programming.header %}
 
   <div class="quote">{{ programming.description }}</div>
 
