--- a/_includes/science.html
+++ b/_includes/science.html
@@ -2,7 +2,7 @@
 
 
 <div class="section" id="science">
-  <div class="header">{{ science.header }}</div>
+  {% include header_line.html header=science.header %}
 
   <div class="quote">{{ science.description }}</div>
 
