--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -1,7 +1,7 @@
 {% assign languages = site.data.languages %}
 
 <div class="section" id="languages">
-  <div class="header">{{ languages.header }}</div>
+  {% include header_line.html header=languages.header %}
 
   <div class="quote">{{ languages.description }}</div>
 
