--- a/css/main.scss
+++ b/css/main.scss
@@ -181,6 +181,14 @@ abbr, span[title] {
 	flex-shrink: 0;
 	text-align: center;
     }
+
+    a:link {
+	color: $color;
+    }
+    a:visited {
+	color: $color;
+    }
+
 }
 
 .section {
@@ -195,6 +203,16 @@ abbr, span[title] {
 	position: sticky;
 	top: 0;
 	background-color: $background-color;
+
+	a:link {
+	    color: $color;
+	}
+	a:visited {
+	    color: $color;
+	}
+	a span {
+	    text-decoration: underline;
+	}
     }
     .link-block {
 	display: flex;
