--- a/_includes/education-projects.html
+++ b/_includes/education-projects.html
@@ -25,7 +25,7 @@
       {% endif %}
       <div class="years">
 	<span class="material-icons">calendar_month</span>
-	<span title="Сроки">{{ pr.since }}—{%- if pr.till -%}{{ pr.till }}{%- else-%}<abbr title="Настоящее время">н.&nbsp;в.</abbr>{%- endif -%}</span>
+	<span title="Сроки">{%- if pr.since -%}{{ pr.since }}—{%- endif -%}{%- if pr.till -%}{{ pr.till }}{%- else-%}<abbr title="Настоящее время">н.&nbsp;в.</abbr>{%- endif -%}</span>
       </div>
       {% if pr.links %}
         {% for ln in pr.links %}
