--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,11 @@ body {
     max-width: 1200px;
 }
 
+a:link, a:visited {
+    color: $color;
+    text-decoration: underline solid;
+}
+
 #content {
     margin: $margin;
 }
@@ -61,9 +66,6 @@ abbr, span[title] {
 	.name {
 	    font-size: 24px;
 	    margin: $margin 0 0.5*$margin 0;
-	    a:link, a:visited {
-		color: $color;
-	    }
 	}
 	.speciality {
 	    margin: 0.5*$margin 0 1.5*$margin 0;
@@ -184,14 +186,6 @@ abbr, span[title] {
 	flex-shrink: 0;
 	text-align: center;
     }
-
-    a:link {
-	color: $color;
-    }
-    a:visited {
-	color: $color;
-    }
-
 }
 
 .section {
@@ -206,13 +200,6 @@ abbr, span[title] {
 	position: sticky;
 	top: 0;
 	background-color: $background-color;
-
-	a:link {
-	    color: $color;
-	}
-	a:visited {
-	    color: $color;
-	}
 	a span {
 	    text-decoration: underline;
 	}
