--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -1,10 +1,12 @@
-<nav id="topmenu">
-  {% for item in site.data.topmenu.menu %}
-  <div>
-    <span class="material-icons">keyboard_double_arrow_down</span>
-    <a href="{{ item.anchor }}">
-      {{ item.name }}
-    </a>
-  </div>
-  {% endfor %}
-</nav>
+<div class="section">
+  <nav id="topmenu">
+    {% for item in site.data.topmenu.menu %}
+    <div>
+      <span class="material-icons">keyboard_double_arrow_down</span>
+      <a href="{{ item.anchor }}">
+	{{ item.name }}
+      </a>
+    </div>
+    {% endfor %}
+  </nav>
+</div>
