--- a/css/main.scss
+++ b/css/main.scss
@@ -176,13 +176,13 @@ abbr, span[title] {
     display: flex;
     flex-direction: row;
     margin: $margin*2 0;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 
     div {
-	margin: 0.5*$margin;
-	width: 180px;
-	height: 50px;
+	margin: 0.5*$margin auto;
+	width: 160px;
+	height: 25px;
 	flex-shrink: 0;
 	text-align: center;
     }
