--- a/_includes/header_line.html
+++ b/_includes/header_line.html
@@ -1,6 +1,6 @@
 <div class="header">
   {{ include.header }}
-  <a href="#header">
+  <a href="#top">
     <span class="material-icons" title="наверх">
       keyboard_double_arrow_up
     </span>
