--- a/_includes/topmenu.html
+++ b/_includes/topmenu.html
@@ -1,4 +1,6 @@
-<div class="section">
+<details class="section">
+  <summary>Разделы</summary>
+
   <nav id="topmenu">
     {% for item in site.data.topmenu.menu %}
     <div>
@@ -8,4 +10,4 @@
     </div>
     {% endfor %}
   </nav>
-</div>
+</details>
